# extension_registry

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  categories.csv  compile.py  entry-schema.json  extension_versions.csv  extensions.csv  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.py  validate.py
.github/workflows/: ci.yml  lint.yml
memberOf/: entry.json
ocdsextensionregistry/: compile.py  extension-schema.json  models.py  util.py  validate.py
ocdsextensionregistry/tests/: standard_categories.csv  test_models.py  test_util.py  test_validate.py  validate_bad_category.csv  validate_bad_core1.csv  validate_bad_core2.csv  validate_bad_id_questionmark.csv  validate_bad_id_space.csv  validate_dupe_id.csv  validate_no_category.csv  validate_no_core.csv  validate_ok.csv  validate_only_github.csv  validate_only_github_repository.csv
schema/: extension_versions-schema.json  extensions-schema.json
scripts/: compile.py  test_csv.py  test_integrity.py
tests/: test_csv.py  test_integrity.py
